# ML_HWs

./: .gitignore  README.MD  pyproject.toml
02/: homework.ipynb
