[tool.poetry]
name = "ML_HWs"
version = "0.1.0"
description = ""
authors = ["raulett <raulett@gmail.com>"]
readme = "README.md"
packages = [{include = "02"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
